--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "react-sound": "^1.2.0"
